--- a/index.html
+++ b/index.html
@@ -3,117 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GarageOnline - Venta de Vehículos</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Titillium+Web:wght@600;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-
+    <title>PrimeAuto Gallery - Venta de Vehículos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <header id="header-main">
-        <div class="header-bg-image"></div>
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Navegación principal">
-            <div class="container">
-                <a class="navbar-brand" href="#inicio">
-                    <i class="fas fa-car" aria-hidden="true"></i> GarageOnline
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold" href="#inicio">
+                    <i class="fas fa-car"></i> PrimeAuto Gallery
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegación">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#inicio">Inicio</a>
+                            <a class="nav-link" href="#inicio" aria-label="Ir a Inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#vehiculos">Vehículos</a>
+                            <a class="nav-link" href="#vehiculos" aria-label="Ir a Vehículos">Vehículos</a>
                         </li>
                     </ul>
-                    <form class="d-flex me-3" role="search">
-                        <input class="form-control me-2" type="search" id="searchInput" placeholder="Buscar por marca, modelo..." aria-label="Buscar vehículos">
+                    <form class="d-flex me-3">
+                        <input class="form-control me-2" type="search" placeholder="Buscar vehículos..." aria-label="Buscar" id="searchInput">
                     </form>
-                    <div class="text-white">
-                        <button class="btn btn-outline-primary position-relative" type="button" data-bs-toggle="modal" data-bs-target="#cartModal" aria-label="Ver carrito de compras">
-                            <i class="fas fa-shopping-cart" aria-hidden="true"></i>
-                            <span id="cartCount" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                0
-                                <span class="visually-hidden">artículos en el carrito</span>
-                            </span>
-                        </button>
-                    </div>
+                    <button class="btn btn-outline-light position-relative" data-bs-toggle="modal" data-bs-target="#cartModal" aria-label="Ver carrito">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="badge bg-danger position-absolute top-0 start-100 translate-middle" id="cartCount">0</span>
+                    </button>
                 </div>
             </div>
         </nav>
+        <div class="hero" style="background-image: url('https://t4.ftcdn.net/jpg/02/82/00/75/360_F_282007508_wdCUP7hUMNK1Cuzj7XmOcFmzyzJ0Nnp9.jpg'); background-size: 100% 50%; height: 50vh; background-position: center;"></div>
     </header>
 
     <main>
-        <section id="inicio" class="container text-center my-5 pt-5">
-            <h1 class="display-4">Bienvenido a GarageOnline</h1>
-            <p class="lead">Tu concesionario de confianza para vehículos nuevos y usados.</p>
+        <section id="inicio" class="py-5">
+            <div class="container">
+                <h1 class="text-center">Bienvenido a PrimeAuto Gallery</h1>
+                <p class="text-center">Descubre la mejor selección de vehículos nuevos y usados. ¡Encuentra tu próximo auto aquí!</p>
+            </div>
         </section>
 
-        <section id="vehiculos" class="container my-5">
-            <h2 class="text-center mb-4">Nuestros Vehículos</h2>
-
-            <div id="loadingSpinner" class_ ="d-flex justify-content-center align-items-center" style="height: 200px;">
-                <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
-                    <span class="visually-hidden">Cargando vehículos...</span>
+        <section id="vehiculos" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Nuestros Vehículos</h2>
+                <div class="row" id="productsContainer">
+                    <div class="d-flex justify-content-center" id="loadingSpinner">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Cargando...</span>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="row" id="productsContainer">
-                </div>
         </section>
     </main>
 
-    <footer class="bg-dark text-white text-center p-4 mt-5">
-        <div class="container">
-            <p>&copy; 2025 GarageOnline. Todos los derechos reservados.</p>
-        </div>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2025 R.G.F. Todos los derechos reservados.</p>
     </footer>
 
-    <div class="modal fade" id="vehicleDetailModal" tabindex="-1" aria-labelledby="vehicleDetailModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
+    <!-- Modal de Detalles -->
+    <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="vehicleDetailModalLabel">Detalles del Vehículo</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    <h5 class="modal-title" id="detailsModalLabel">Detalles del Vehículo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="" id="detailImage" class="img-fluid mb-3" alt="Imagen del vehículo">
-                    <div id="detailInfo">
-                        </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" id="addToCartFromDetailBtn" data-codigo="">
-                        <i class="fas fa-cart-plus"></i> Añadir al Carrito
-                    </button>
+                    <img id="modalImage" src="" alt="Imagen del vehículo" class="img-fluid mb-3">
+                    <ul id="modalDetails" class="list-group"></ul>
+                    <button class="btn btn-primary mt-3 addToCartBtn" id="modalAddToCartBtn" data-codigo="">Añadir al Carrito</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Modal de Cantidad -->
     <div class="modal fade" id="quantityModal" tabindex="-1" aria-labelledby="quantityModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-sm modal-dialog-centered">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="quantityModalLabel">Seleccionar Cantidad</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <label for="quantityInput" class="form-label">Cantidad:</label>
-                    <input type="number" class="form-control" id="quantityInput" value="1" min="1" max="10">
+                    <input type="number" class="form-control" id="quantityInput" min="1" value="1">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -123,57 +105,51 @@
         </div>
     </div>
 
+    <!-- Modal del Carrito -->
     <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-scrollable">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="cartModalLabel">Carrito de Compras</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body" id="cartItems">
-                    <p>Tu carrito está vacío.</p>
+                <div class="modal-body">
+                    <div id="cartItems"></div>
+                    <p class="fw-bold">Total: $<span id="cartTotal">0</span></p>
                 </div>
-                <div class="modal-footer justify-content-between">
-                    <div>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir viendo vehículos</button>
-                    </div>
-                    <div class="text-end">
-                        <h4 class="mb-2">Total: <span id="cartTotal" class="fw-bold text-primary">$0.00</span></h4>
-                        <button type="button" class="btn btn-success" id="checkoutBtn">
-                            <i class="fas fa-credit-card"></i> Pagar
-                        </button>
-                    </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Seguir viendo vehículos</button>
+                    <button type="button" class="btn btn-success" id="checkoutBtn" data-bs-toggle="modal" data-bs-target="#paymentModal">Pagar</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Modal de Pago -->
     <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="paymentModalLabel">Procesar Pago</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="paymentForm">
+                    <form>
                         <div class="mb-3">
-                            <label for="paymentName" class="form-label">Nombre en la Tarjeta</label>
-                            <input type="text" class="form-control" id="paymentName" placeholder="Juan Pérez" required>
+                            <label for="nameInput" class="form-label">Nombre Completo</label>
+                            <input type="text" class="form-control" id="nameInput" required>
                         </div>
                         <div class="mb-3">
-                            <label for="paymentCard" class="form-label">Número de Tarjeta</label>
-                            <input type="text" class="form-control" id="paymentCard" placeholder="0000 0000 0000 0000" required>
+                            <label for="cardInput" class="form-label">Número de Tarjeta</label>
+                            <input type="text" class="form-control" id="cardInput" required>
                         </div>
-                        <div class="row">
-                            <div class="col-md-7 mb-3">
-                                <label for="paymentExpiry" class="form-label">Vencimiento (MM/AA)</label>
-                                <input type="text" class="form-control" id="paymentExpiry" placeholder="12/28" required>
-                            </div>
-                            <div class="col-md-5 mb-3">
-                                <label for="paymentCVC" class="form-label">CVC</label>
-                                <input type="text" class="form-control" id="paymentCVC" placeholder="123" required>
-                            </div>
+                        <div class="mb-3">
+                            <label for="expiryInput" class="form-label">Fecha de Expiración (MM/AA)</label>
+                            <input type="text" class="form-control" id="expiryInput" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="cvvInput" class="form-label">CVV</label>
+                            <input type="text" class="form-control" id="cvvInput" required>
                         </div>
                     </form>
                 </div>
@@ -185,9 +161,7 @@
         </div>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
-    <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
